Bug 1714135 - Limit width of toolbar badges so they don't shift the toolbar r=desktop-theme-reviewers,dao
Set a limit on the width of toolbar badges so that when they expand they do not shift the position of other elements on the toolbar.

Differential Revision: https://phabricator.services.mozilla.com/D119781

--- a/toolkit/themes/linux/global/toolbarbutton.css
+++ b/toolkit/themes/linux/global/toolbarbutton.css
@@ -87,7 +87,7 @@ toolbarbutton:-moz-lwtheme:not(:hover, [checked="true"], [open="true"], [disable
   margin: -5px 0 0 !important;
   margin-inline-end: -4px !important;
   min-width: 14px;
-  max-width: 24px;
+  max-width: 20px;
   line-height: 10px;
   text-align: center;
   align-self: start;
