--- a/toolkit/themes/windows/global/toolbarbutton.css
+++ b/toolkit/themes/windows/global/toolbarbutton.css
@@ -93,7 +93,7 @@ toolbarbutton[disabled="true"] {
   margin: -5px 0 0 !important;
   margin-inline-end: -4px !important;
   min-width: 14px;
-  max-width: 24px;
+  max-width: 20px;
   line-height: 10px;
   text-align: center;
   align-self: start;
